# csi_motion

./: .gitignore  README.md  main.py  requirements.txt  run_realtime.sh
app/: app.py  load_model.py
app/data_load/: __init__.py  parse_data.py
app/models/: __init__.py  cnn_lstm.py  mamba_s6.py  transformer.py
cpp_preprocessor/: CMakeLists.txt  calc_amplitude.cpp  csi_structs.hpp  generate_data.cpp  generate_data.hpp  main.cpp  main.hpp  main1.cpp  median_filter.cpp  output_struct.hpp  output_to_file.cpp  parsing_input.cpp  sync.cpp
notebooks/: README.md  inference_example.ipynb  model.ipynb
tests/: __init__.py  simulate.py
tools/: __init__.py  list_ports.py  receiver.py  receiver_split.py  watcher.py
weights/: train_mean.npy  train_std.npy
